# used by automake to create Makefile.in

EXTRA_DIST = \
Annotation.java \
AttributedCharacterIterator.java \
AttributedString.java \
AttributedStringIterator.java \
BreakIterator.java \
CharacterIterator.java \
ChoiceFormat.java \
CollationElementIterator.java \
CollationKey.java \
Collator.java \
DateFormat.java \
DateFormatSymbols.java \
DecimalFormatSymbols.java \
DefaultBreakIterator.java \
FieldPosition.java \
Format.java \
MessageFormat.java \
NumberFormat.java \
ParseException.java \
ParsePosition.java \
RuleBasedCollator.java \
SimpleDateFormat.java \
StringCharacterIterator.java
